# CollisionEngine

./: CMakeLists.txt  README.md
include/: map.h  player.h  util.h
include/engine/: color.h  game.h
include/engine/math/: line.h  shape.h  util.h  vector.h
src/: keybindings.c  main.c  map.c  player.c
src/engine/: game.c  math.c
